k8s/dev/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio.io/rev: canary
#    istio-injection: enabled

---
