k8s/dev/istio-system.yaml
# Istio LB service must also have the ports opened.
# Using a separate LB to test indpendent gw updates.
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dev
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: TCP
    - hosts:
        - "*"
      port:
        name: https
        number: 443
        protocol: TCP
    - hosts:
        - "*"
      port:
        name: tls-dns
        number: 953
        protocol: TCP
    - hosts:
        - "*"
      port:
        name: ssh
        number: 5222
        protocol: TCP
    - hosts:
        - "*"
      port:
        number: 8384
        name: syncthing
        protocol: TCP
    - hosts:
        - "*"
      port:
        name: http2-wps
        number: 5228
        protocol: TCP
